--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
               <div class="row mt-n4">
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
-                    <i class="bi bi-emoji-smile" style="color: #20b38e;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
+                    <i class="bi bi-journal-code" style="color: #20b38e;"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Years of experience</strong> in HTML, CSS, and JavaScript</p>
                   </div>
                 </div>
