--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bi-building"></i></div>
               <h4 class="title"><a href="">Web Development</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Full stack web development to suit each client's needs.</p>
             </div>
           </div>
 
@@ -290,7 +290,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Data Analysis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p class="description">Taking your data, cleaning, analyzing, and interpreting to unveil priceless insights into your business.</p>
             </div>
           </div>
 
@@ -298,7 +298,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-image"></i></div>
               <h4 class="title"><a href="">Data Visualization</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Extract, transform, and load your data to create visualizations that illustrate your vision.</p>
             </div>
           </div>
 
@@ -306,7 +306,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-diagram-2"></i></div>
               <h4 class="title"><a href="">Web Scraping</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">Inventive automatation to retrieve countless diagnostics from the endless bounds of the web.</p>
             </div>
           </div>
 
