--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kerry Wehner</h1>
-      <h2>Innovative Data Analyst</h2>
+      <h2>Software Developer</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -71,7 +71,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Industrious data analyst and web developer with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, query development, full-stack web development, and digital marketing.</p>
+          <p>Industrious software developer and data analyst with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, query development, full-stack web development, and digital marketing.</p>
         </div>
 
         <div class="row">
@@ -445,7 +445,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kerry Wehner</h3>
-      <p>Web Developer/Data Analyst</p>
+      <p>Software Developer/Data Analyst</p>
       <div class="social-links">
         <a href="https://github.com/kerwehner" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/kwehner/" class="instagram"><i class="bi bi-instagram"></i></a>         
