--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Certificate of Data Analytics</h4>
+              <h4>Graduate Certificate of Data Analytics</h4>
               <h5>2020 - 2021</h5>
               <p><em>University of Kansas, Lawrence, KS</em></p>
             </div>
@@ -237,6 +237,19 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Software Developer</h4>
+              <h5>2021 - Present</h5>
+              <p><em>Well Brains, Wichita, KS </em></p>
+              <p>
+              <ul>
+                <li>Analyzes software needs and proposes software solutions to meet them</li>
+                <li>Works with a 5 member team utilizing Jira to ensure all tasks are organized and completed</li>
+                <li>Creates, tests, and deploys application on Azure DevOps</li>
+                <li>Works on building new Angular components for web app to increase consumer time on page</li>
+              </ul>
+              </p>
+            </div>
             <div class="resume-item">
               <h4>General Manager</h4>
               <h5>2017 - Present</h5>
