--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kerry Wehner</h1>
-      <h2>Software Developer</h2>
+      <h2>Analyst</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -71,7 +71,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Industrious software developer and data analyst with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, query development, full-stack web development, and digital marketing.</p>
+          <p>Industrious data and analyst and programmer with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
         </div>
 
         <div class="row">
@@ -82,13 +82,16 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Kerry Wehner</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Websites:</strong> <span>https://github.com/kerwehner</span></li>
+                    <li><i class="bi bi-chevron-right"></i><br><strong>Websites:</strong> 
+                    <span><a href="https://github.com/kerwehner">Github</a></a><p>
+                    <p><a href ="https://www.linkedin.com/in/kerrywehner/">LinkedIn</a></p></span>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Wichita, Kansas</span></li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> <span>Bachelor's of Science: University of Kansas Sociology<p>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> 
+                    <span>Bachelor's of Science: University of Kansas Sociology<p>
                     <p>Bachelor's of Science: Wichita State University Exercise Physiology</p>
                     <p>Certificate of Data Analytics: University of Kansas</p>
                     </span></li>
@@ -124,12 +127,13 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-globe" style="color: #3d0158;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="525" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Days</strong> spent playing golf during COVID.</p>
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div>
+            <!-- End .content-->
 
             <div class="skills-content ps-lg-4">
               <div class="progress">
@@ -156,7 +160,7 @@
               <div class="progress">
                 <span class="skill">Python <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -170,21 +174,21 @@
               <div class="progress">
                 <span class="skill">Pandas <i class="val">65%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
                 <span class="skill">Jupyter Notebook <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">SQL <i class="val">60%</i></span>
+                <span class="skill">SQL <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
@@ -209,7 +213,7 @@
             <h3 class="resume-title">Outline</h3>
             <div class="resume-item pb-0">
               <h4>Kerry Wehner</h4>
-              <p><em>Web Developer/Data Analyst with 3+ years of experience in project management. Passionate about building captivating web applications.</em></p>
+              <p><em>Data Analyst/Programmer with 4+ years of experience in project management. Passionate about building captivating web applications.</em></p>
               <p>
               <ul>
                 <li>Wichita, Kansas</li>
@@ -238,8 +242,21 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Software Developer</h4>
+              <h4>Data Analyst</h4>
               <h5>2021 - Present</h5>
+              <p><em>Fleetcor, Wichita, KS </em></p>
+              <p>
+              <ul>
+                <li>Performs extensive data analysis to best support business decision making for the sales team</li>
+                <li>Monitors sales performance through key performance metrics, reports, and models for several teams</li>
+                <li>Utilizes SQL queries to analyze key metrics for financial planning</li>
+                <li>Creates reports utilizing Microsoft Excel, Infogram, DOMO, and other programs using all functions to best display analyzations</li>
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Software Developer</h4>
+              <h5>2021 - 2022</h5>
               <p><em>Well Brains, Wichita, KS </em></p>
               <p>
               <ul>
@@ -252,7 +269,7 @@
             </div>
             <div class="resume-item">
               <h4>General Manager</h4>
-              <h5>2017 - Present</h5>
+              <h5>2017 - 2021</h5>
               <p><em>Public at the Brickyard, Wichita, KS </em></p>
               <p>
               <ul>
@@ -458,7 +475,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kerry Wehner</h3>
-      <p>Software Developer/Data Analyst</p>
+      <p>Data Analyst</p>
       <div class="social-links">
         <a href="https://github.com/kerwehner" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/kwehner/" class="instagram"><i class="bi bi-instagram"></i></a>         
