--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kerry Wehner</h1>
-      <h2>Analyst</h2>
+      <h2>Software Engineer / Analyst</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -71,7 +71,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Industrious data and analyst and programmer with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
+          <p>Industrious data analyst and software engineer with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
         </div>
 
         <div class="row">
@@ -172,9 +172,9 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Pandas <i class="val">65%</i></span>
+                <span class="skill">Snowflake<i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -213,7 +213,7 @@
             <h3 class="resume-title">Outline</h3>
             <div class="resume-item pb-0">
               <h4>Kerry Wehner</h4>
-              <p><em>Data Analyst/Programmer with 4+ years of experience in project management. Passionate about building captivating web applications.</em></p>
+              <p><em>Analyst with 5+ years of experience in project management. Passionate about building captivating web applications.</em></p>
               <p>
               <ul>
                 <li>Wichita, Kansas</li>
@@ -242,8 +242,23 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+
+              <h4>Business Analyst</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>Restaurant Brands International</em></p>
+              <p>
+              <ul>
+                <li>Supervises and built a data analytics team for the information technologies support team</li>
+                <li>Utilizes AWS to monitor key metrics for to increase organization and accountability</li>
+                <li>Maintains and monitors thousands of users for Snowflake, through Git and Github</li>
+                <li>Creates webpage in Jira displaying walk-throughs for 10+ programs to be utilized for onboarding</li>
+              </ul>
+              </p>
+            </div>
+
+            <div class="resume-item">
               <h4>Data Analyst</h4>
-              <h5>2021 - Present</h5>
+              <h5>2021 - 2022</h5>
               <p><em>Fleetcor, Wichita, KS </em></p>
               <p>
               <ul>
@@ -251,19 +266,6 @@
                 <li>Monitors sales performance through key performance metrics, reports, and models for several teams</li>
                 <li>Utilizes SQL queries to analyze key metrics for financial planning</li>
                 <li>Creates reports utilizing Microsoft Excel, Infogram, DOMO, and other programs using all functions to best display analyzations</li>
-              </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>Software Developer</h4>
-              <h5>2021 - 2022</h5>
-              <p><em>Well Brains, Wichita, KS </em></p>
-              <p>
-              <ul>
-                <li>Analyzes software needs and proposes software solutions to meet them</li>
-                <li>Works with a 5 member team utilizing Jira to ensure all tasks are organized and completed</li>
-                <li>Creates, tests, and deploys application on Azure DevOps</li>
-                <li>Works on building new Angular components for web app to increase consumer time on page</li>
               </ul>
               </p>
             </div>
@@ -346,54 +348,8 @@
     </section><!-- End My Services Section -->
 
     <!-- ======= My Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
 
-        <div class="section-title">
-          <span>Portfolio</span>
-          <h2>Portfolio</h2>
-        </div>
-
-        <ul id="portfolio-flters" class="d-flex justify-content-center">
-          <li data-filter=".filter-app">Apps</li>
-        </ul>
-
-        <div class="row portfolio-container">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/OHareSS.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>OHare Airport Departure Application</h4>
-              <p>App</p>
-              <a href="assets/img/OHareSS.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="https://ord-flight-delays.herokuapp.com/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-
-          </div>
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/Equator.png" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Weather Correlations with the Equator</h4>
-              <p>App</p>
-              <a href="assets/img/Equator.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="https://kerwehner.github.io/HTMLCSS/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-
-      </div>
-    </section><!-- End My Portfolio Section -->
+    <!-- End My Portfolio Section -->
 
  
     <!-- ======= Contact Me Section ======= -->
@@ -475,7 +431,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kerry Wehner</h3>
-      <p>Data Analyst</p>
+      <p>Analyst</p>
       <div class="social-links">
         <a href="https://github.com/kerwehner" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/kwehner/" class="instagram"><i class="bi bi-instagram"></i></a>         
