--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kerry Wehner</h1>
-      <h2>Software Engineer / Analyst</h2>
+      <h2>Analyst</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -71,7 +71,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Industrious data analyst and software engineer with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
+          <p>Industrious data analyst with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
         </div>
 
         <div class="row">
@@ -93,7 +93,7 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>Degrees:</strong> 
                     <span>Bachelor's of Science: University of Kansas Sociology<p>
                     <p>Bachelor's of Science: Wichita State University Exercise Physiology</p>
-                    <p>Certificate of Data Analytics: University of Kansas</p>
+                    <p>Post-Graduate Certificate of Data Analytics: University of Kansas</p>
                     </span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kerwehner@gmail.com</span></li>
                   </ul>
