--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Kerry Wehner</h1>
-      <h2>Analyst</h2>
+      <h2>Business Intelligence</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
@@ -71,7 +71,7 @@
         <div class="section-title">
           <span>About Me</span>
           <h2>About Me</h2>
-          <p>Industrious data analyst with a vast academic history in computer, social, and exercise science. In-depth knowledge of research methodologies, financial planning and analysis, query development, full-stack web development, and digital marketing.</p>
+          <p>Business intelligence professional focused on transforming complex, unstructured data into clear, actionable insights. I build end-to-end analytics solutions that support financial planning, forecasting, and operational decision-making. In my current role within the agriculture industry, I integrate fragmented systems, improve data reliability, and create tools that drive smarter, faster business outcomes.</p>
         </div>
 
         <div class="row">
@@ -94,6 +94,7 @@
                     <span>Bachelor's of Science: University of Kansas Sociology<p>
                     <p>Bachelor's of Science: Wichita State University Exercise Physiology</p>
                     <p>Post-Graduate Certificate of Data Analytics: University of Kansas</p>
+                    <p>Dale Carnegie Course: Effective Communications and Human Relations</p>
                     </span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kerwehner@gmail.com</span></li>
                   </ul>
@@ -103,7 +104,7 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-journal-code" style="color: #20b38e;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Years of experience</strong> in HTML, CSS, and JavaScript</p>
                   </div>
                 </div>
@@ -119,7 +120,7 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-clock" style="color: #2cbdee;"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
                     <p><strong>Years of experience</strong> in customer service.</p>
                   </div>
                 </div>
@@ -137,16 +138,16 @@
 
             <div class="skills-content ps-lg-4">
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill">Dax <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
+                <span class="skill">HTML/CSS <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -160,33 +161,33 @@
               <div class="progress">
                 <span class="skill">Python <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">Tableau <i class="val">90%</i></span>
+                <span class="skill">C# <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Snowflake<i class="val">85%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Jupyter Notebook <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
                 <span class="skill">SQL <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Power BI <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Visual Studio <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -213,7 +214,7 @@
             <h3 class="resume-title">Outline</h3>
             <div class="resume-item pb-0">
               <h4>Kerry Wehner</h4>
-              <p><em>Analyst with 5+ years of experience in project management. Passionate about building captivating web applications.</em></p>
+              <p><em>Developer with 8+ years of experience in project management. Passionate about building captivating web applications.</em></p>
               <p>
               <ul>
                 <li>Wichita, Kansas</li>
@@ -222,6 +223,12 @@
               </p>
             </div>
 
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Dale Carnegie Course: Effective Communications and Human Relations</h4>
+              <h5>2024</h5>
+              <p><em>Dale Carnegie - Kansas Heartland</em></p>
+            </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Graduate Certificate of Data Analytics</h4>
@@ -243,6 +250,18 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
 
+              <h4>Businedd Intelligence Developer</h4>
+              <h5>2023 - Current</h5>
+              <p><em>MKC</em></p>
+              <p>
+              <ul>
+                <li>Led the company-wide transition to Power BI, enabling self-service analytics and hosting training sessions to empower teams to act on data-driven insights</li>
+                <li>Designed and implemented a custom CRM API to deliver high-demand data directly to decision-makers across departments</li>
+                <li>Built a new SQL database to unlock access to ERP data that was previously siloed and unusable, laying the groundwork for enterprise-wide reporting</li>
+                <li>Championed a cultural shift toward data-driven decision-making by aligning leadership and frontline teams around strategic reporting</li>
+              </ul>
+              </p>
+            </div>
               <h4>Business Analyst</h4>
               <h5>2022 - 2023</h5>
               <p><em>Restaurant Brands International</em></p>
@@ -269,6 +288,7 @@
               </ul>
               </p>
             </div>
+
             <div class="resume-item">
               <h4>General Manager</h4>
               <h5>2017 - 2021</h5>
@@ -283,6 +303,7 @@
               </p>
             </div>
             <div class="resume-item">
+
               <h4>Front-End Web Developer</h4>
               <h5>2012 - 2016</h5>
               <p><em>The Curtain Factory, Wichita, KS</em></p>
