--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
               <h5>2024</h5>
               <p><em>Dale Carnegie - Kansas Heartland</em></p>
             </div>
-            <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Graduate Certificate of Data Analytics</h4>
               <h5>2020 - 2021</h5>
@@ -250,7 +249,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
 
-              <h4>Businedd Intelligence Developer</h4>
+              <h4>Business Intelligence Developer</h4>
               <h5>2023 - Current</h5>
               <p><em>MKC</em></p>
               <p>
@@ -261,7 +260,6 @@
                 <li>Championed a cultural shift toward data-driven decision-making by aligning leadership and frontline teams around strategic reporting</li>
               </ul>
               </p>
-            </div>
               <h4>Business Analyst</h4>
               <h5>2022 - 2023</h5>
               <p><em>Restaurant Brands International</em></p>
@@ -287,25 +285,8 @@
                 <li>Creates reports utilizing Microsoft Excel, Infogram, DOMO, and other programs using all functions to best display analyzations</li>
               </ul>
               </p>
-            </div>
-
-            <div class="resume-item">
-              <h4>General Manager</h4>
-              <h5>2017 - 2021</h5>
-              <p><em>Public at the Brickyard, Wichita, KS </em></p>
-              <p>
-              <ul>
-                <li>Responsible for negotiating liquor costs, increasing revenues by 25% quarterly</li>
-                <li>Utilizes QuickBooks for financial planning and forecasting</li>
-                <li>Utilizing knowledge of social media advertising to create ad budgets and arrangements</li>
-                <li>Co-Produced a short film for the Tall Grass Film Festival in 2015 and 2017- won a top 5 mention out of 30 films</li>
-              </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-
               <h4>Front-End Web Developer</h4>
-              <h5>2012 - 2016</h5>
+              <h5>2012 - 2021</h5>
               <p><em>The Curtain Factory, Wichita, KS</em></p>
               <p>
               <ul>
