added email link

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <li><i class="bi bi-chevron-right"></i><br><strong>Websites:</strong> 
                     <span><a href="https://github.com/kerwehner">Github</a></a><p>
                     <p><a href ="https://www.linkedin.com/in/kerrywehner/">LinkedIn</a></p></span>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto: kerwehner@gmail.com">kerwehner@gmail.com</a></mailto:></span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Wichita, Kansas</span></li>
                   </ul>
                 </div>
@@ -96,8 +97,6 @@
                     <p>Post-Graduate Certificate of Data Analytics: University of Kansas</p>
                     <p>Dale Carnegie Course: Effective Communications and Human Relations</p>
                     </span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kerwehner@gmail.com</span></li>
-                  </ul>
                 </div>
               </div>
               <div class="row mt-n4">
@@ -280,7 +279,7 @@
               <p>
               <ul>
                 <li>Performs extensive data analysis to best support business decision making for the sales team</li>
-                <li>Monitors sales performance through key performance metrics, reports, and models for several teams</li>
+                <li>Monitors data performance through key performance metrics, reports, and models for several teams</li>
                 <li>Utilizes SQL queries to analyze key metrics for financial planning</li>
                 <li>Creates reports utilizing Microsoft Excel, Infogram, DOMO, and other programs using all functions to best display analyzations</li>
               </ul>
@@ -290,7 +289,7 @@
               <p><em>The Curtain Factory, Wichita, KS</em></p>
               <p>
               <ul>
-                <li>Utilized HTML, CSS, Bootstrap and Adobe Photoshop in designing website to promote sales</li>
+                <li>Utilized HTML, CSS, Bootstrap and Adobe Photoshop in designing website to promote data</li>
                 <li>Planned, developed, tested, deployed and maintained web applications</li>
                 <li>Provided effective troubleshooting and remediation for web applications</li>
               </ul>
