adding services pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <li><a class="nav-link scrollto" href="#about">About</a></li>
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -314,7 +313,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bi-building"></i></div>
-              <h4 class="title"><a href="">Web Development</a></h4>
+              <h4 class="title"><a href="WebDevelopment/webservices.html">Web Development</a></h4>
               <p class="description">Full stack web development to suit each client's needs.</p>
             </div>
           </div>
@@ -322,7 +321,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Data Analysis</a></h4>
+              <h4 class="title"><a href="DataAnalysis/dataanalysis.html">Data Analysis</a></h4>
               <p class="description">Taking your data, cleaning, analyzing, and interpreting to unveil priceless insights into your business.</p>
             </div>
           </div>
@@ -432,7 +431,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Kerry Wehner</h3>
-      <p>Analyst</p>
+      <p>Business Intelligence</p>
       <div class="social-links">
         <a href="https://github.com/kerwehner" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.instagram.com/kwehner/" class="instagram"><i class="bi bi-instagram"></i></a>         
