added data analysis details

--- a/DataAnalysis/dataanalysis.html
+++ b/DataAnalysis/dataanalysis.html
@@ -69,56 +69,125 @@
 
 
 
-    <!-- ======= Portfolio Details Section 2 ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+<!-- ======= Portfolio Details Section 1 ======= -->
+<section id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-        <div class="row gy-4">
+    <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper-container">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/pythondash.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/pythonscript.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/jupyter.png" alt="">
-                </div>               
-
-              </div>
-              <div class="swiper-pagination"></div>
-              </div>
-              
-
-            <div class="portfolio-info">
-              <ul>
-              Pictured is a complex data integration involving operational data from an API the company had never previously leveraged. By automating the data pipeline with Python and visualizing in Power BI, I delivered actionable insights on production efficiency and resource usage, supporting smarter, data-driven decisions.
-              </ul>
-              </p>
-              </div></div>
-
-              <div class="col-lg-4">
-              <div class="portfolio-info">
-              <h3>Python</h3>
-              <ul>
-                <li><strong>Libraries</strong>: Pandas, Flask, Numpy, BeautifulSoup</li>
-                <li><strong>Advantages</strong>: speed, flexibilty, automation, scalability, and libraries</li>
-                <li><strong>Experience</strong>: 5 years</li>
-              </ul>
-              Python is a cornerstone of my data analysis toolkit, enabling me to efficiently handle complex tasks such as transforming large-scale data models, integrating diverse APIs, and structuring data within DataFrames. This proficiency allows me to seamlessly channel refined data into visualization platforms like Power BI, facilitating insightful and interactive data representations. By leveraging Python's robust libraries and its interoperability with tools like Power BI, I ensure that data is not only processed effectively but also presented in a manner that drives informed decision-making.
+      <!-- Image Slider (Left Column) -->
+      <div class="col-lg-8">
+        <div class="portfolio-details-slider swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="../assets/img/pythondash.png" alt="">
             </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/pythonscript.png" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/jupyter.png" alt="">
+            </div>               
           </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
 
+      <!-- Python Info Boxes (Right Column) -->
+      <div class="col-lg-4">
+        <!-- Python Box 1 -->
+        <div class="portfolio-info python-overview">
+          <h3>Python</h3>
+          <ul>
+            <li><strong>Libraries</strong>: Pandas, Flask, NumPy, BeautifulSoup</li>
+            <li><strong>Experience</strong>: 5 years</li>
+          </ul>
         </div>
 
+        <!-- Python Box 2 -->
+        <div class="portfolio-info">
+          <ul>
+            <li>Python is a cornerstone of my data analysis toolkit, enabling me to efficiently handle complex tasks such as transforming large-scale data models, integrating diverse APIs, and structuring data within DataFrames. This proficiency allows me to seamlessly channel refined data into visualization platforms like Power BI, facilitating insightful and interactive data representations. By leveraging Python's robust libraries and its interoperability with tools like Power BI, I ensure that data is not only processed effectively but also presented in a manner that drives informed decision-making.</li>
+          </ul>
+        </div>
       </div>
-    </section><!-- End Portfolio Details Section 2 -->
+
+    </div> <!-- End .row -->
+
+    <!-- Pictured Here Box (Below Both Columns) -->
+    <div class="row mt-4">
+      <div class="col-lg-12">
+        <div class="portfolio-caption-box">
+          <p>
+            Pictured is a complex data integration involving operational data from an API the company had never previously leveraged. By automating the data pipeline with Python and visualizing in Power BI, I delivered actionable insights on production efficiency and resource usage, supporting smarter, data-driven decisions.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+    <!-- End Portfolio Details Section 1 -->
+
+<!-- ======= Portfolio Details Section 2 ======= -->
+<section id="portfolio-details" class="portfolio-details">
+  <div class="container">
+
+    <div class="row gy-4">
+
+      <!-- Image Slider (Left Column) -->
+      <div class="col-lg-8">
+        <div class="portfolio-details-slider swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="../assets/img/samdash.png" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/powerm.png" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/powermapi.png" alt="">
+            </div>               
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+
+      <!-- Python Info Boxes (Right Column) -->
+      <div class="col-lg-4">
+        <!-- Python Box 1 -->
+        <div class="portfolio-info python-overview">
+          <h3>Microsoft Fabric</h3>
+          <ul>
+            <li><strong>Tools</strong>: Microsft Power BI, OneLake, Dataflows, Azure SQL Datebase</li>
+            <li><strong>Experience</strong>: 4 years</li>
+          </ul>
+        </div>
+
+        <!-- Python Box 2 -->
+        <div class="portfolio-info">
+          <ul>
+            <li>I leverage Microsoft Fabric to transform and analyze data efficiently. Using Power Query extensively for ETL processes, developing custom visuals in Power BI to deliver insightful reports. My dataflows ensure near real-time data integration, while OneLake serves as my data lake to eliminate data silos. I maintain a seamless and robust data ecosystem, ensuring that my data is always up-to-date and accessible.</li>
+          </ul>
+        </div>
+      </div>
+
+    </div> <!-- End .row -->
+
+    <!-- Pictured Here Box (Below Both Columns) -->
+    <div class="row mt-4">
+      <div class="col-lg-12">
+        <div class="portfolio-caption-box">
+          <p>
+          With advanced coding expertise, these visuals highlight how I utilized Power BI as a customized ETL solution. I transformed API data to capture customer-salesman relationships, analyzed sales performance metrics, and implemented row-level security for data governance.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+    <!-- End Portfolio Details Section 2 -->
 
 
   </main><!-- End #main -->
