editing web services

--- a/WebDevelopment/webservices.html
+++ b/WebDevelopment/webservices.html
@@ -67,35 +67,34 @@
       </div>
     </section><!-- Breadcrumbs Section -->
 
-    <!-- ======= Portfolio Details Section 1 ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
+<!-- ======= Portfolio Details Section 1 ======= -->
+<section id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-        <div class="row gy-4">
+    <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper-container">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/BWGLHome.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/BWGLJoin.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/BWGLPictures.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+      <!-- Image Slider (Left Column) -->
+      <div class="col-lg-8">
+        <div class="portfolio-details-slider swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="../assets/img/BWGLHome.png" alt="">
             </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/BWGLJoin.png" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/BWGLPictures.png" alt="">
+            </div>               
           </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
+      <!-- Python Info Boxes (Right Column) -->
+      <div class="col-lg-4">
+        <!-- Python Box 1 -->
+        <div class="portfolio-info python-overview">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web Development</li>
@@ -104,49 +103,52 @@
                 <li><strong>Project URL</strong>: <a href="#">https://www.bwglladysgolfwichita.com/</a></li>
               </ul>
             </div>
-            <div class="portfolio-description">
-              <h2>Wichita Business Women's Golf League Website</h2>
-              <p>
-                I built and maintain the website for the Wichita Women’s Business Golf League, a growing community of women professionals who connect through golf. The site features regularly updated tournament schedules, standings, monthly newsletters, and photos from league events. I designed it to be both functional and welcoming—with an easy path for new members to learn more and join the league. This project blends my love for data, design, and community-building.
-              </p>
-            </div>
-          </div>
 
+        <!-- Python Box 2 -->
+        <div class="portfolio-info">
+          <ul>
+            <li>I built and maintain the website for the Wichita Women’s Business Golf League, a growing community of women professionals who connect through golf. The site features regularly updated tournament schedules, standings, monthly newsletters, and photos from league events. I designed it to be both functional and welcoming—with an easy path for new members to learn more and join the league. This project blends my love for data, design, and community-building.</li>
+          </ul>
         </div>
+      </div>
 
+    </div> 
+
+    <!-- End .row -->
       </div>
     </section>
+
     <!-- End Portfolio Details Section 1 -->
 
-    <!-- ======= Portfolio Details Section 2 ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
 
-        <div class="row gy-4">
+<!-- ======= Portfolio Details Section 2 ======= -->
+<section id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper-container">
-              <div class="swiper-wrapper align-items-center">
+    <div class="row gy-4">
 
-                <div class="swiper-slide">
-                  <img src="../assets/img/publichome.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/publicstory.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="../assets/img/brickyardhome.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+      <!-- Image Slider (Left Column) -->
+      <div class="col-lg-8">
+        <div class="portfolio-details-slider swiper-container">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="../assets/img/publichome.png" alt="">
             </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/publicstory.png" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="../assets/img/brickyardhome.png" alt="">
+            </div>               
           </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info">
+      <!-- Python Info Boxes (Right Column) -->
+      <div class="col-lg-4">
+        <!-- Python Box 1 -->
+        <div class="portfolio-info python-overview">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web Development</li>
@@ -155,21 +157,23 @@
                 <li><strong>Project URL</strong>: <a href="#">https://publicbrickyard.com</a></li>
               </ul>
             </div>
-            <div class="portfolio-description">
-              <h2>Public at the Brickyard</h2>
-              Oversaw the transition of a restaurant’s website infrastructure to an internally managed server and hosting environment. This move improved performance, reliability, and long-term flexibility. I continue to manage updates to the server and site content to ensure a smooth experience for owners.
-              <p>
-              </p>
-            </div>
+            <div class="portfolio-info">
+              <li>
+              Oversaw the transition of a restaurant’s website infrastructure to an internally managed server and hosting environment. This move improved performance, reliability, and long-term flexibility. I continue to manage updates to the server and site content to ensure a smooth experience for owners.</li>
+            </ul>
           </div>
-
         </div>
-
-      </div>
-    </section><!-- End Portfolio Details Section 2 -->
-
-
-  </main><!-- End #main -->
+  
+      </div> <!-- End .row -->
+  
+    </div>
+  </section>
+      <!-- End Portfolio Details Section 2 -->
+  
+  
+    </main>
+    <!-- End #main -->
+  
 
 
   <!-- ======= Footer ======= -->
