--- a/DataAnalysis/dataanalysis.html
+++ b/DataAnalysis/dataanalysis.html
@@ -159,7 +159,7 @@
         <div class="portfolio-info python-overview">
           <h3>Microsoft Fabric</h3>
           <ul>
-            <li><strong>Tools</strong>: Microsft Power BI, OneLake, Dataflows, Azure SQL Datebase</li>
+            <li><strong>Tools</strong>: Microsoft Power BI, OneLake, Dataflows, Azure SQL Datebase</li>
             <li><strong>Experience</strong>: 4 years</li>
           </ul>
         </div>
