--- a/WebDevelopment/webservices.html
+++ b/WebDevelopment/webservices.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="/#hero">Home</a></li>
+        <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
           <ul>
         <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
       </ul>
@@ -59,7 +59,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Web Development</h2>
           <ol>
-            <li><a href="/#hero">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="webservices.html">Web Development</a></li>
           </ol>
         </div>
