--- a/WebDevelopment/webservices.html
+++ b/WebDevelopment/webservices.html
@@ -43,7 +43,7 @@
       <ul>
         <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
           <ul>
-        <li><a class="nav-link scrollto" href="/#contact">Contact</a></li>
+        <li><a class="nav-link scrollto" href="/index.html#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
